<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="OtherFarmedItemViewModel"
            type="com.farmerfirst.growagric.ui.farm.OtherFarmedItemsActivity"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="80dp"
        android:background="@color/app_bg_color"
        tools:context=".ui.farm.OtherFarmedItemsActivity">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@android:color/transparent">
            <ImageView
                android:id="@+id/tvUserProfileName"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginBottom="1dp"
                android:background="@color/custom_app_theme_color_lite"
                android:contentDescription="@string/app_name" />
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/checklist_that_you_farm"
                        android:textSize="12sp"
                        android:textColor="@color/colorGray"/>
                    <GridLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:rowOrderPreserved="true"
                        android:columnCount="3"
                        android:rowCount="3">
                        <androidx.appcompat.widget.AppCompatCheckBox
                            android:id="@+id/checkCow"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_columnWeight="1"
                            android:layout_marginEnd="10dp"
                            android:layout_marginBottom="10dp"
                            android:text="@string/visit_cows"
                            android:textSize="14sp"
                            android:theme="@style/CustomCheckboxGa"/>
                        <androidx.appcompat.widget.AppCompatCheckBox
                            android:id="@+id/checkPigs"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_columnWeight="1"
                            android:layout_marginEnd="10dp"
                            android:layout_marginBottom="10dp"
                            android:text="@string/visit_pigs"
                            android:textSize="14sp"
                            android:theme="@style/CustomCheckboxGa"/>
                        <androidx.appcompat.widget.AppCompatCheckBox
                            android:id="@+id/checkTurkey"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_columnWeight="1"
                            android:layout_marginEnd="10dp"
                            android:layout_marginBottom="10dp"
                            android:text="@string/turkey"
                            android:textSize="14sp"
                            android:theme="@style/CustomCheckboxGa"/>
                        <androidx.appcompat.widget.AppCompatCheckBox
                            android:id="@+id/checkSheep"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_columnWeight="1"
                            android:layout_marginEnd="10dp"
                            android:layout_marginBottom="10dp"
                            android:text="@string/sheep"
                            android:textSize="14sp"
                            android:theme="@style/CustomCheckboxGa"/>
                        <androidx.appcompat.widget.AppCompatCheckBox
                            android:id="@+id/checkBeef"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_columnWeight="1"
                            android:layout_marginEnd="10dp"
                            android:layout_marginBottom="10dp"
                            android:text="@string/beef"
                            android:textSize="14sp"
                            android:theme="@style/CustomCheckboxGa" />
                        <androidx.appcompat.widget.AppCompatCheckBox
                            android:id="@+id/checkBees"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_columnWeight="1"
                            android:layout_marginEnd="10dp"
                            android:layout_marginBottom="10dp"
                            android:text="@string/bees"
                            android:textSize="14sp"
                            android:theme="@style/CustomCheckboxGa" />
                        <androidx.appcompat.widget.AppCompatCheckBox
                            android:id="@+id/checkDucks"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_columnWeight="1"
                            android:layout_marginEnd="10dp"
                            android:layout_marginBottom="10dp"
                            android:text="@string/ducks"
                            android:textSize="14sp"
                            android:theme="@style/CustomCheckboxGa" />
                        <androidx.appcompat.widget.AppCompatCheckBox
                            android:id="@+id/checkRabbits"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_columnWeight="1"
                            android:layout_marginEnd="10dp"
                            android:layout_marginBottom="10dp"
                            android:text="@string/rabbits"
                            android:textSize="14sp"
                            android:theme="@style/CustomCheckboxGa" />
                        <androidx.appcompat.widget.AppCompatCheckBox
                            android:id="@+id/checkFish"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_columnWeight="1"
                            android:layout_marginEnd="10dp"
                            android:layout_marginBottom="10dp"
                            android:text="@string/fish"
                            android:textSize="14sp"
                            android:theme="@style/CustomCheckboxGa" />
                        <androidx.appcompat.widget.AppCompatCheckBox
                            android:id="@+id/checkSnail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_columnWeight="1"
                            android:layout_marginEnd="10dp"
                            android:layout_marginBottom="10dp"
                            android:text="@string/snail"
                            android:textSize="14sp"
                            android:theme="@style/CustomCheckboxGa" />
                        <androidx.appcompat.widget.AppCompatCheckBox
                            android:id="@+id/checkMushroom"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_columnWeight="1"
                            android:layout_marginEnd="10dp"
                            android:layout_marginBottom="10dp"
                            android:text="@string/mushrooms"
                            android:textSize="14sp"
                            android:theme="@style/CustomCheckboxGa" />
                        <androidx.appcompat.widget.AppCompatCheckBox
                            android:id="@+id/checkGoat"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_columnWeight="1"
                            android:layout_marginEnd="10dp"
                            android:layout_marginBottom="10dp"
                            android:text="@string/goat"
                            android:textSize="14sp"
                            android:theme="@style/CustomCheckboxGa" />
                        <androidx.appcompat.widget.AppCompatCheckBox
                            android:id="@+id/checkDairy"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_columnWeight="1"
                            android:layout_marginEnd="10dp"
                            android:layout_marginBottom="10dp"
                            android:text="@string/dairy"
                            android:textSize="14sp"
                            android:theme="@style/CustomCheckboxGa" />
                        <androidx.appcompat.widget.AppCompatCheckBox
                            android:id="@+id/checkKienyejiChicken"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_columnWeight="1"
                            android:layout_marginEnd="10dp"
                            android:layout_marginBottom="10dp"
                            android:text="@string/kienyeji_chicken"
                            android:textSize="14sp"
                            android:theme="@style/CustomCheckboxGa" />
                        <androidx.appcompat.widget.AppCompatCheckBox
                            android:id="@+id/checkDogs"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_columnWeight="1"
                            android:layout_marginEnd="10dp"
                            android:layout_marginBottom="10dp"
                            android:text="@string/dogs"
                            android:textSize="14sp"
                            android:theme="@style/CustomCheckboxGa" />
                    </GridLayout>
                    <TextView
                        android:id="@+id/textViewFarmedItems"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:visibility="gone"/>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputFarmedItems"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:visibility="gone"
                        app:hintEnabled="false">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/editFarmedItems"
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:autofillHints=""
                            android:background="@drawable/ga_edit_text_drawable"
                            android:hint="@string/farm_other_challenges"
                            android:inputType="text"
                            android:maxLength="25"
                            android:padding="10dp"
                            android:singleLine="true"
                            android:text=""
                            android:textColor="@color/black"
                            android:textColorHint="#888"
                            android:textSize="16sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.kusu.loadingbutton.LoadingButton
                        android:id="@+id/loginButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="45dp"
                        android:text="@string/join"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        app:lb_buttonColor="@color/custom_app_theme_color"
                        app:lb_isCircular="false"
                        app:lb_isShadowEnable="false"
                        app:lb_loaderMargin="0dp"
                        app:lb_shadowColor="@color/custom_app_theme_color_lite"
                        app:lb_shadowHeight="0dp" />
                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>