<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="FarmVisitBeforeFinanceViewModel"
            type="com.farmerfirst.growagric.ui.farm_visit.FarmVisitsActivity"/>
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:orientation="vertical"
        tools:context=".ui.farm_visit.FarmVisitsActivity">
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/visit2_chick_gained_weight"
                android:textColor="@color/custom_app_theme_color"/>
            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/radioButtonChickenGainWeightYes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/visit_yes"
                android:theme="@style/CustomRadioButtonGa">
            </androidx.appcompat.widget.AppCompatRadioButton>
            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/radioButtonChickenGainWeightNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/visit_no"
                android:theme="@style/CustomRadioButtonGa">
            </androidx.appcompat.widget.AppCompatRadioButton>
        </RadioGroup>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textNumberOfChickThatHaveDiedSinceLastVisit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:hintEnabled="true"
            app:hintTextAppearance="@style/HintText">
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/editNumberOfChickThatHaveDiedSinceLastVisit"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:autofillHints=""
                android:background="@drawable/ga_edit_text_drawable"
                android:hint="How many chicken have died since the last visit?"
                android:inputType="number"
                android:maxLength="5"
                android:padding="10dp"
                android:singleLine="true"
                android:text=""
                android:textColor="@color/black"
                android:textColorHint="#888"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textNumberOfPeopleLiveInTheHouse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:hintEnabled="true"
            app:hintTextAppearance="@style/HintText">
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/editTotalNumberOfChickenThatHaveDied"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:autofillHints=""
                android:background="@drawable/ga_edit_text_drawable"
                android:hint="How many chicken have died in total"
                android:inputType="number"
                android:maxLength="5"
                android:padding="10dp"
                android:singleLine="true"
                android:text=""
                android:textColor="@color/black"
                android:textColorHint="#888"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textAdditionalObservation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:hintEnabled="true"
            app:hintTextAppearance="@style/HintText">
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/editAdditionalObservation"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:autofillHints=""
                android:background="@drawable/ga_edit_text_drawable"
                android:hint="Additional observation"
                android:inputType="textMultiLine"
                android:maxLength="160"
                android:padding="10dp"
                android:singleLine="false"
                android:text=""
                android:textColor="@color/black"
                android:textColorHint="#888"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:weightSum="1">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textDateOfNextVisitRevisit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight=".85"
                app:hintEnabled="true"
                app:hintTextAppearance="@style/HintText">
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/editDateOfNextVisit"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:autofillHints=""
                    android:background="@drawable/ga_edit_text_drawable"
                    android:hint="@string/next_visit_date"
                    android:inputType="text"
                    android:maxLength="10"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:focusable="false"
                    android:longClickable="false" />
            </com.google.android.material.textfield.TextInputLayout>
            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/buttonDateOfNextVisit"
                android:layout_width="0dp"
                android:layout_height="44dp"
                android:layout_gravity="bottom"
                android:layout_marginStart="1dp"
                android:layout_marginEnd="1dp"
                android:layout_weight=".15"
                android:adjustViewBounds="true"
                android:background="@drawable/ga_layout_drawable"
                android:padding="10dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_calendar128x128"
                android:tint="@color/custom_app_theme_color"/>
        </LinearLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/ga_button_drawable"
            android:text="@string/save"
            android:textAllCaps="true"
            android:textSize="15sp"
            android:textStyle="bold"
            android:padding="15dp"
            android:textColor="@color/white"
            android:layout_gravity="end"/>
    </LinearLayout>
</layout>